# Otus_Cpp2406_HW2

./: CMakeLists.txt  auxiliary.cpp  auxiliary.hpp  filtration.cpp  filtration.hpp  ip_address.cpp  ip_address.hpp  main.cpp  readwrite.cpp  readwrite.hpp  test_ips.cpp  test_stream.cpp  test_stream.hpp
.github/workflows/: release.yml
